--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,17 @@ input[type="text"]:focus {
   border-color: #02d869;
   outline: none;
 }
-
+.btn{
+  padding: 12px 20px;
+  background-color: #02d869;
+  color: #2c2d30;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  height: 45px;
+  margin-left: 25%;
+}
 .add {
   flex-shrink: 0;
   padding: 12px 20px;
